app/assets/stylesheets/main.css
/* ... */
.app_discription {
    padding:25px 0 0 5px;
    float:left;
    width:140px;
    height:110px;
}
p.title, p.title a {
    font-family:helvetica,sans-serif;
    color:#003366;
    font-size:16pt;
    text-shadow: 1px 1px 0px #FFFFFF;
    text-decoration:none;
}
p.subtitle {
    font-family:helvetica,sans-serif;
    color:#4c2d00;
    font-size:10pt;
    text-shadow: 1px 1px 0px #FFFFFF;
}
p.discription {
    font-family:helvetica,sans-serif;
    color:#4c2d00;
    font-size:12pt;
    text-shadow: 1px 1px 0px #FFFFFF;
}
#launch_holder {
    width:175px;
    height:165px;
    float:right;
    background:url("../images/launch-background.png") no-repeat;
}
#launch {
    border:none;
    display:block;
    margin:54px 0 0 -1px;
    width:166px;
    height:0;
    padding-top:57px;
    background:url("../images/launch.png") no-repeat;
    background-position:0 0;
    overflow:hidden;
}
#launch:hover {
    background-position:0 -57px;
}
#submit_holder {
    width:175px;
    height:165px;
    float:right;
    background:url("../images/launch-background.png") no-repeat;
}
#submit {
    border:none;
    display:block;
    margin:54px 0 0 -1px;
    width:166px;
    height:0;
    padding-top:58px;
    background:url("../images/submit.png") no-repeat;
    background-position:0 0;
    overflow:hidden;
}
#submit:hover {
     background-position:0 -58px;
}
.line_break {
    display:block;
    width:930px;
    height:2px;
    margin:0 auto;
    margin-bottom:40px;
    margin-top:35px;
    background:url("../images/line-break.png") no-repeat;

}
/*
        Showcase
*/
#showcase_padd {
    padding-top:80px;
}
#showcase_holder {
    padding:0 0 0 0;
    position:relative;
    width:960px;
    height:508px;
    background:url("../images/background-showcase.png") no-repeat;
}
.showcase_row {
    padding:0 0 25px 0;
    width:960px;
    height:140px;
}
.info_holder {
    padding:40px 0 25px 0;
    width:960px;
    line-height:200%;
}
.info_form {
    width:389px;
    height:340px;
    margin:0 auto;
}

#slideshow .info_holder {
  line-height: auto !important;
}

p.info_brown {
    text-align:center;
    font-family:helvetica,sans-serif;
    color:#4c2d00;
    font-size:22pt;
    text-shadow: 1px 1px 0px #FFFFFF;
}
p.info_blue {
    text-align:center;
    font-family:helvetica,sans-serif;
    color:#003366;
    font-size:22pt;
    text-shadow: 1px 1px 0px #FFFFFF;
}
.info_thumb_blue a{
 text-decoration: none;
 color: #003366;
}
.info_thumb_blue a:hover{
 text-decoration: none;
 color: #f49032;
}

#feature p{
  padding:30px 18px 0 0;
}

.info_thumb_blue {
    text-align:center;
    font-family:helvetica,sans-serif;
    color:#003366;
    font-size:22pt;
    text-shadow: 1px 1px 0px #FFFFFF;
}
p.info_new_blue, p.info_new_blue a {
    text-align:center;
    font-family:helvetica,sans-serif;
    color:#003366;
    font-size:16pt;
    text-shadow: 1px 1px 0px #FFFFFF;
    text-decoration:none;
}
/*
        Tabs
*/
#bottom_ribbon {
    margin:0 0 0 -21px;
    z-index:-200;
    top:842px;
    width:996px;
    height:57px;
    position:absolute;
    background:url("../images/bottom-ribbon.png") no-repeat;
}
#tab_ribbon {
    width:956px;
    height:50px;
    position:absolute;
    overflow:hidden;
}
.ribbon_left {
    float:left;
    width:8px;
    height:8px;
}
.ribbon_fill {
    background:url("../images/tab.png");
    width:8px;
    height:40px;
}
.ribbon_left .ribbon_triangle {
    background:url("../images/tab-ribbon-effect-left.png") no-repeat;
}
.ribbon_right .ribbon_triangle {
    background:url("../images/tab-ribbon-effect-right.png") no-repeat;
}
.ribbon_right {
    float:right;
    width:8px;
    height:8px;
}
.ribbon_triangle {
    width:8px;
    height:8px;
}
.tab_border {
    border-left: 1px solid #000;
    border-right: 1px solid #000;
    height:40px;
}
ul.tabs {
    margin-left: 7px;
    position:absolute;
    display:block;
    list-style: none;
    height: 50px; /*--Set height of tabs--*/
    width:950px;
    z-index:9002;
}
ul.tabs li {
    width:314px;
    text-align:center;
    float:left;
    margin:0 0 0 0;
    padding:0 0 0 0;
    height: 70px; /*--Subtract 1px from the height of the unordered list--*/
    line-height: 40px; /*--Vertically aligns the text within the tab--*/
    margin-bottom: -1px; /*--Pull the list item down 1px--*/
    overflow: hidden;
    position: relative;
    background: #003366;
    background: url("../images/tab.png") repeat-x;
}
ul.tabs li a {
    text-decoration: none;
    color: #448db2;
    display: block;
    font-size: 1.4em;
    padding: 0 20px;
    outline: none;
    text-shadow: 1px 1px 0px #000;
}
ul.tabs li.active {
    background:url("../images/tab-active.png") no-repeat bottom center;
}
ul.tabs li a:hover {
    background:transparent;
}
html ul.tabs li.active a, html ul.tabs li.active a:hover  { /*--Makes sure that the active tab does not listen to the hover properties--*/
    color:#fff;
}
.tab_container {
    overflow: hidden;
    clear: both;
    float: left; width: 100%;
    background:transparent;
}
.tab_content {
    height:535px;
    padding:0 0 0 0;
    font-size: 1.2em;
}
/*
	Slideshow
*/

#slides {
    top:15px;
    left:4px;
    z-index:100;
}

/*
	Slides container
	Important:
	Set the width of your slides container
	Set to display none, prevents content flash
*/

.slide_holder {
    width:960px;
    height:360px;
}
.slides_container {
    width:955px;
    height:360px;
    overflow:hidden;
    position:relative;
    display:block;
}

/*
	Each slide
	Important:
	Set the width of your slides
	If height not specified height will be set by the slide content
	Set to display block
*/

.slides_container a {
    width:960px;
    height:360px;

}

.slides_container a img {
    display:block;
}

/*
	Next/prev buttons
*/
#arrow_holder {
    width:332px;
    height:20px;
    margin:0 auto;
}
.next {
    float:right;
    width:25px;
    height:20px;
    display:inline;
    z-index:101;
}
/* ... */

